- Fixed vanilla issue where the Charcoal Kiln apprentice has an inconsistent overworld palette.
- Fixed the Goldenrod link receptionist being visible chilling in the void, far to the right.
- Fixed changeblock issue in Burned Tower B1F.
- Fixed an event flag issue with the Dragon's Den twins.
- Fixed the Pewter City storybook so it always prints the "Read which tale?" string when on the chapter list.
- Fixed Medium Bethany being able to phase through a rock.
- Fixed a dialogue crash tied to the Hiker in Saffron's Pokémon Center.
- Adjusted the player's position in the Mt.Moon rival cutscene.
- Added a new floor to the Pewter City Museum. This is now where the player obtains the Silver Wing.
- Made it so the Scientists allied with Team Rocket also use the new Rocket battle transition.
- Made it so the Coin Case is available in Celadon if the player didn't grab it in the Goldenrod Underground.
- Changed the reward for the Lake of Rage record-sized Magikarp event.
- Updated a large amount of menu icons. Courtesy of SoupPotato (and Damien for helping with Umbreon's icon).


1.2.7
- Fixed block issue in Olivine and Vermilion port passage maps.
- Fixed vanilla inconsistency with the Scientist spriteset.
- Fixed issue where the Vermilion Gym puzzle wouldn't reset properly. Courtesy of SoupPotato.
- Made the colors of thrown Poké Balls more accurate.
- Updated Gyarados' back sprite. Courtesy of SoupPotato.
- Made the Underground Path maps more visually distinct, and added a few NPCs to them.
- Implemented an item-trading sequence. To initiate it, talk to the little boy in Cherrygrove.


1.2.8 
* Official release version. 
- The title screen is now finalized (Suicune code by the amazing Seasick).
- Cleaned-up some stray vanilla bugs.
- Fixed Saffron City spawn points.
- Tweaked the Blackbelt scene on Route 4 to fix a changeblock oversight in Cerulean.
- Updated Misdreavus' back sprite. Courtesy of SoupPotato.
- Updated Blue's overworld sprite.