@@ -271,8 +271,8 @@ LakeOfRageGroupSprites:
 	db SPRITE_COOLTRAINER_M
 	db SPRITE_LASS
 	db SPRITE_YOUNGSTER
-	; 8 of max 9 walking sprites
-	db SPRITE_GYARADOS
+	db SPRITE_SURF_GYARADOS
+	; 9 of max 9 walking sprites
 	db SPRITE_FRUIT_TREE
 	db SPRITE_POKE_BALL
 	db 0 ; end
