@@ -110,5 +110,6 @@ OverworldSprites:
  	overworld_sprite KrisRunSpriteGFX, 12, WALKING_SPRITE, PAL_OW_BLUE
  	overworld_sprite RocketSlowpokeSpriteGFX, 4, STILL_SPRITE, PAL_OW_PINK
  	overworld_sprite BeedrillSpriteGFX, 12, WALKING_SPRITE, PAL_OW_RED
+ 	overworld_sprite SurfGyaradosSpriteGFX, 12, WALKING_SPRITE, PAL_OW_RED
  	overworld_sprite BlankSpriteGFX, 4, STILL_SPRITE, PAL_OW_RED
 	assert_table_length NUM_OVERWORLD_SPRITES
