@@ -107,4 +107,5 @@ ChrisRunSpriteGFX::            INCBIN "gfx/sprites/chris_run.2bpp"
 KrisRunSpriteGFX::             INCBIN "gfx/sprites/kris_run.2bpp"
 RocketSlowpokeSpriteGFX::      INCBIN "gfx/sprites/rocket_slowpoke.2bpp"
 BeedrillSpriteGFX::            INCBIN "gfx/sprites/beedrill.2bpp"
+SurfGyaradosSpriteGFX::        INCBIN "gfx/sprites/surf_gyarados.2bpp"
 BlankSpriteGFX::               INCBIN "gfx/sprites/blank.2bpp"
